--- a/angular.json
+++ b/angular.json
@@ -63,7 +63,10 @@
             },
             "development": {
               "buildTarget": "music-app:build:development"
-            }
+            },
+           "options":{
+            "proxyConfig": "proxy.conf.json"
+           }
           },
           "defaultConfiguration": "development"
         },
